Changed CSS so that pin size is no longer relative to screen width since pin was way too big when browser was at full size.

--- a/src/index.css
+++ b/src/index.css
@@ -109,7 +109,7 @@ body {
 
   .pin {
     display: flex;
-    width: 5vw;
+    width: 40px;
   }
 
   .pin-icon {
